		- updated TVRage script
		- Fixed bug #503 - segfault in zsfunctions.c findfileextsub and findfileextsubp
		  partial fix for findfileextsub done by pute
		- Fixed bug #512 - several rescan fixes regarding zips
		- Fixed bug #511 - incorrect diskcount for certain file_id.diz
		- several fixes and improvements on psxc-imdb, see CHANGELOG

v1.1.0a --> 1.2.0 :
		- added option to make accept_script run prior to complete_script.
		- fix in tv-rage tcl to compensate for layout changes.
		- fixed small bug in postdel that prevented it from removing progressbars in
		  mp3-releases. Thanks goes to |DureX| for report and fix.
		- fixed a bug in rescan that prevented it from (re-)creating mp3-symlinks.
		- added check_for_missing_sample_dirs and create_missing_sample_link vars.
		- updated psxc-imdb to 2.9g
		- changed default allowed_years to include 2008 and exclude 2004
                - we no longer manually add spaces between racers in sortstats()/racer_list,
                  so racersplit is now per default " ". Neither do we add a space after
                  racersplit_prior.
                - renamed racersplit_prior to racersplit_prefix, and removed it from conf 
                  (it's been deprecated for a while).
                - removed racersplit & racersmsg from conf. (it's been deprecated for a while)
                - added racersplit_postfix.
                - %T/%t now users racersplit* too.
		- fixed a bug re: sort_by_group - case should now no longer matter
		- added audio_artist_noid3 option to sort by releasename istf id3 info (by pp)
		- fixed small bug in speedtest dirs when mark_file_as_bad was set to TRUE.
		- fixed small bug in sample_list.
		- fixed small bug with channel announce of groups.
		- fixed bug #472 - remove metadata completely when dir is empty.
		- updated libcopy to include special libs needed on linux for chroot dnslookups
		- added psxc-trailer as part of the scripts-dir.